gateway/test/src/test/resources/test-plan-data/simple/simple-echo/errors/001-404.resttest
GET /SimpleEchoTest/echo/1.0.0/path/to/app/resource admin/admin
X-Echo-ErrorCode: 404
X-API-Key: 12345

----
404
